[package]
name = "matrixbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
configparser = "3.0.2"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git", package = "matrix-sdk" }
mime = "0.3.17"
reqwest = "0.11.18"
serde = "1.0.171"
serde_json = "1.0.100"
#rust-sdk = "0.0.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "parking_lot"] }
tracing-subscriber = "0.3.17"
url = "2.4.0"
